@@ -72,6 +72,8 @@ SubVersion: $Id$
 	        file selector (bug #1294628). 
 	- [roms] $1801: fixed bug #1304338 (doesn't save skinless mode in .ini file)
 	- [roms] $1803: fixed #1305054 (doesn't refresh vector bkpt state)
+	- [kevin] $1811: optimized grayscale movem detection and added support for dirty-coded HW2/3 grayscale interrupts
+	                 abusing the stack pointer to hold data (currently only the latest Grib is known to do that)
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
